# nlp

./: .gitignore  README.md  Text Representation. Part 1.ipynb  Text Representation. Part 2.ipynb  Text Representation.ipynb  pyproject.toml
data/: 0001_doc.ru  0002_doc.ru  0003_doc.ru  0004_doc.ru  0005_doc.ru  0006_doc.ru  0007_doc.ru  0008_doc.ru  0009_doc.ru  0010_doc.ru  meta_data.json
