[project]
name = "nlp"
version = "0.1.0"
description = "Practical NLP"
authors = [
    {name = "Dmitry Zhigalo"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "spacy (>=3.8.5,<4.0.0)",
    "notebook (>=7.4.1,<8.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "regex (>=2024.11.6,<2025.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "gensim (>=4.3.3,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
